@@ -1,3 +1,7 @@
+2012-03-24  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* term/js/canvasmath.js:  Handle tab and newline.
+
 2012-03-20  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/plot2d.c src/plot2d.h:  Allow variable pointsize in label plots.
